--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,52 @@
 # Dependencies
 node_modules/
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment files
 .env
 .env.local
-.env.*.local
-
-# Backups
-*.bak
-*.tmp
-*.temp
-
-# OS files
-.DS_Store
-Thumbs.db
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# Sensitive data
-*-credentials.md
-*-secrets.md
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Build outputs
+dist/
+build/
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Backup files - IMPORTANT: Don't track backups in Git
+05-Backups/
+*.backup
+*.bak
+backup/
+backups/
+
+# Large files
+*.zip
+*.rar
+*.7z
+*.tar.gz
+
+# Database dumps
+*.dump
+*.sql
